--- a/Biblioteca Interactiva Municipal/web/estilos/main_styles.css
+++ b/Biblioteca Interactiva Municipal/web/estilos/main_styles.css
@@ -10,7 +10,7 @@ COLOR PALETTE
 1. Fonts
 2. Body and some general stuff
 3. Home
-	3.1 Currency
+	3.1 Dropdown
 	3.2 Language
 	3.3 Account
 	3.4 Main Navigation
@@ -278,9 +278,9 @@ section
     font-size:30px;
     font-weight: 500px;
     color:white;
-    margin-left: 390px;
-	height: 50px;
-	line-height: 50px;
+    margin-left: 410px;
+    height: 50px;
+    line-height: 50px;
     color: white;
     text-shadow: 0px 2px 3px;
 }
@@ -288,17 +288,17 @@ section
 
 
 /*********************************
-3.1 Currency
+3.1 Dropdown
 *********************************/
 
-.currency
+.dropdown
 {
 	display: block;
 	position: relative;
 	padding-right: 5px;
 	padding-left: 5px;
 }
-.currency > a
+.dropdown > a
 {
     display: block;
 	color: #b5aec4;
@@ -307,22 +307,22 @@ section
 	line-height: 50px;
 	font-size: 5px;
 }
-.currency > a > i
+.dropdown > a > i
 {
 	margin-left: 8px;
 }
-.currency:hover .currency_selection
+.dropdown:hover .dropdown_selection
 {
 	visibility: visible;
 	opacity: 1;
 	top: 120%;
 }
-.currency_selection
+.dropdown_selection
 {
 display: block;
 	position: absolute;
 	top: 120%;
-	width: 170%;
+	width: auto;
 	background: linear-gradient(#061F72, black);
 	visibility: hidden;
 	opacity: 0;
@@ -334,13 +334,13 @@ display: block;
 	-o-transition: opacity 0.3s ease;
 	transition: all 0.3s ease;
 }
-.currency_selection li
+.dropdown_selection li
 {
 	padding-left: 10px;
 	padding-right: 10px;
 	line-height: 10px;
 }
-.currency_selection li a
+.dropdown_selection li a
 {
 	display: block;
 	color: 	#FFFFFF;
@@ -352,11 +352,11 @@ display: block;
 	-o-transition: opacity 0.3s ease;
 	transition: all 0.3s ease;
 }
-.currency_selection li a:hover
+.dropdown_selection li a:hover
 {
 	color: #b5aec4;
 }
-.currency_selection li:last-child a
+.dropdown_selection li:last-child a
 {
 	border-bottom: none;
 }
