Separación del HTML en distintos jsp, incluyendo header, footer y librerías.

--- a/Biblioteca Interactiva Municipal/web/estilos/main_styles.css
+++ b/Biblioteca Interactiva Municipal/web/estilos/main_styles.css
@@ -948,6 +948,25 @@ display: block;
 	color: #b5aec4;
 }
 
+/*********************************
+10. Newsletter
+*********************************/
+
+#select{
+    height: 30px;
+    width: 250px;
+
+}
+
+#input{
+    width: 250px;
+}
+
+
+.w3-container {
+    padding-top: 70px;
+    padding-left: 25px;
+}
 
 
 /*********************************
