--- a/Biblioteca Interactiva Municipal/web/estilos/main_styles.css
+++ b/Biblioteca Interactiva Municipal/web/estilos/main_styles.css
@@ -35,6 +35,8 @@ COLOR PALETTE
 *********************************/
 
 *
+
+
 {
 	margin: 0;
 	padding: 0;
@@ -1039,4 +1041,23 @@ display: block;
 .footer_social ul li a:hover
 {
 	color: #fe4c50;
+}
+
+
+/*PROPIOS*/
+
+.formu{
+    display: block;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+    height: 800px;
+    margin-top: 200px;
+    margin-left: 250px;
+    margin-right: 250px;
+}
+.log {
+    margin-left: 50px;
+    align-content: center;
+    
 }
