--- a/Biblioteca Interactiva Municipal/web/estilos/main_styles.css
+++ b/Biblioteca Interactiva Municipal/web/estilos/main_styles.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /* CSS Document */
 
-/******************************
+/**********
 
 COLOR PALETTE
 
@@ -22,17 +22,17 @@ COLOR PALETTE
 
 
 
-******************************/
+**********/
 
-/***********
+/*****
 1. Fonts
-***********/
+*****/
 
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,900');
 
-/*********************************
+/***********
 2. Body and some general stuff
-*********************************/
+***********/
 
 *
 
@@ -245,9 +245,9 @@ section
 	overflow: hidden;
 }
 
-/*********************************
+/***********
 3. Home
-*********************************/
+***********/
 
 .header
 {
@@ -289,9 +289,9 @@ section
 
 
 
-/*********************************
+/***********
 3.1 Dropdown
-*********************************/
+***********/
 
 .dropdown
 {
@@ -363,9 +363,9 @@ display: block;
 	border-bottom: none;
 }
 
-/*********************************
+/***********
 3.2 Language
-*********************************/
+***********/
 
 .language
 {
@@ -444,9 +444,9 @@ display: block;
 	border-bottom: none;
 }
 
-/*********************************
+/***********
 3.3 Account
-*********************************/
+***********/
 
 .account
 {
@@ -527,9 +527,9 @@ display: block;
 	margin-right: 10px;
 }
 
-/*********************************
+/***********
 3.4 Main Navigation
-*********************************/
+***********/
 
 .my_account_item 
 {
@@ -636,9 +636,9 @@ display: block;
 	color: #FFFFFF;
 }
 
-/*********************************
+/***********
 3.5 Hamburger Menu
-*********************************/
+***********/
 
 .hamburger_container
 {
@@ -803,9 +803,9 @@ display: block;
 	border-bottom: none;
 }
 
-/*********************************
+/***********
 3.6 Logo
-*********************************/
+***********/
 
 .logo_container
 {
@@ -828,9 +828,9 @@ display: block;
     width:90px;
 }
 
-/*********************************
+/***********
 3.7 Main Slider
-*********************************/
+***********/
 
 .main_slider
 {
@@ -897,9 +897,9 @@ display: block;
 	margin-top: 32px;
 }
 
-/*********************************
+/***********
 4. Banner
-*********************************/
+***********/
 
 .banner
 {
@@ -950,9 +950,9 @@ display: block;
 	color: #b5aec4;
 }
 
-/*********************************
+/***********
 10. Newsletter
-*********************************/
+***********/
 
 #select{
     height: 30px;
@@ -974,10 +974,17 @@ display: block;
     padding-left: 25px;
 }
 
+.ingresar-libro {
+    padding-top: 200px;
+}
 
-/*********************************
+#input-text{
+    width: 250px;
+}
+
+/***********
 5. Footer
-*********************************/
+***********/
 
 .footer_nav_container
 {
@@ -1046,16 +1053,6 @@ display: block;
 
 /*PROPIOS*/
 
-.formu{
-    display: block;
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px;
-    height: 800px;
-    margin-top: 200px;
-    margin-left: 250px;
-    margin-right: 250px;
-}
 .log {
     margin-left: 50px;
     align-content: center;
