--- a/Biblioteca Interactiva Municipal/web/estilos/main_styles.css
+++ b/Biblioteca Interactiva Municipal/web/estilos/main_styles.css
@@ -1050,6 +1050,11 @@ display: block;
 
 /*PROPIOS*/
 
+
+.ingresar-libro{
+    
+    padding-top: 200px;
+}
 .log {
     margin-left: 50px;
     align-content: center;
