--- a/Biblioteca Interactiva Municipal/web/estilos/responsive.css
+++ b/Biblioteca Interactiva Municipal/web/estilos/responsive.css
@@ -300,7 +300,7 @@
 {
 	.hamburger_container
 	{
-		margin-left: 300px;
+		margin-left: 350px;
 	}
 }
 
@@ -438,7 +438,7 @@
 {
         .hamburger_container
 	{
-		margin-left: 200px;
+		margin-left: 150px;
 	}
 }
 
@@ -450,7 +450,7 @@
 {
         .hamburger_container
 	{
-		margin-left: 120px;
+		margin-left: 130px;
 	}
 }
 
@@ -715,7 +715,34 @@
 {
     	.hamburger_container
 	{
-		margin-left: 10px;
+		margin-left: 20px;
 	}
+        
+        .main_slider 
+        {
+            height: 600px;
+            margin-left: -15px;
+        }
+        
+        .footer_nav_container
+	{
+                height: 150px;
+		margin-top: 200px;
+	}
+	.cr
+	{
+		margin-top: -150px;
+	}
+	.footer_nav
+	{
+		margin-top: -500px;
+                height: 50px;
+	}
+	.footer_social
+	{
+		margin-top: 0px;
+                margin-left: -5px;
+	}
+
 	
 }
