--- a/Biblioteca Interactiva Municipal/web/estilos/responsive.css
+++ b/Biblioteca Interactiva Municipal/web/estilos/responsive.css
@@ -73,36 +73,6 @@
 	{
 		width: 80%;
 	}
-	.banner_item
-	{
-		height: 220px;
-	}
-	.product-item
-	{
-		height: 360px;
-	}
-	.product
-	{
-		height: 320px;
-	}
-	.timer li
-	{
-		width: 90px;
-		height: 90px;
-	}
-	.timer_num
-	{
-		font-size: 36px;
-		font-weight: 500;
-	}
-	.timer_unit
-	{
-		margin-top: 5px;
-	}
-	.blog_title
-	{
-		font-size: 20px;
-	}
 }
 
 /************
@@ -125,14 +95,6 @@
 	.main_slider_content h6
 	{
 		margin-bottom: 23px;
-	}
-	.shop_now_button
-	{
-		margin-top: 26px;
-	}
-	.grid-item
-	{
-		width: 25%;
 	}
 	.top_nav
 	{
@@ -157,104 +119,6 @@
 		width: 100%;
 		padding-right: 15px;
 	}
-	.banner_item
-	{
-		height: 160px;
-	}
-	.banner_category
-	{
-		min-width: 160px;
-		height: 40px;
-	}
-	.banner_category a
-	{
-		font-size: 16px;
-		line-height: 40px;
-	}
-	.product-item
-	{
-		width: 25%;
-	}
-	.deal_ofthe_week_col
-	{
-		display: -webkit-box;
-		display: -moz-box;
-		display: -ms-flexbox;
-		display: -webkit-flex;
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-	}
-	.deal_ofthe_week_content
-	{
-		position: relative;
-		top: auto;
-		left: auto;
-		height: auto;
-	}
-	.deal_ofthe_week_img
-	{
-		text-align: center;
-	}
-	.timer li
-	{
-		width: 70px;
-		height: 70px;
-	}
-	.timer_num
-	{
-		font-size: 28px;
-	}
-	.timer_unit
-	{
-		margin-top: 1px;
-		font-size: 14px;
-	}
-	.benefit_col
-	{
-		margin-bottom: 30px;
-	}
-	.benefit_col:last-child
-	{
-		margin-bottom: 0px;
-	}
-	.blog_item_col
-	{
-		margin-bottom: 30px;
-	}
-	.blog_item_col:last-child
-	{
-		margin-bottom: 0px;
-	}
-	.blog_item
-	{
-		height: 440px;
-	}
-	.blog_title
-	{
-		font-size: 24px;
-	}
-	.newsletter_text
-	{
-		height: auto;
-		margin-top: 30px;
-	}
-	.newsletter_text p
-	{
-		margin-top: 5px;
-	}
-	.newsletter_form
-	{
-		height: auto;
-		margin-top: 30px;
-		margin-bottom: 40px;
-	}
 	.footer_nav_container
 	{
 		height: auto;
@@ -276,8 +140,13 @@
 {
         .hamburger_container
 	{
-		margin-left: 450px;
+            margin-left: 450px;
 	}
+        
+        .footer_social
+        {
+            margin-left: -5px;
+        }
 }
 
 /************
@@ -286,7 +155,7 @@
 
 @media only screen and (max-width: 880px)
 {
-		.hamburger_container
+	.hamburger_container
 	{
 		margin-left: 400px;
 	}
@@ -321,62 +190,10 @@
 	{
 		margin-left: 240px;
 	}
-	.shop_now_button
-	{
-		margin-top: 23px;
-	}
-	.red_button a
-	{
-		font-size: 12px;
-	}
 	.banner_item
 	{
 		margin-bottom: 30px;
 		height: 210px;
-	}
-	.new_arrivals_title
-	{
-		margin-top: 44px;
-	}
-	.product-item
-	{
-		width: 33.333333333333%;
-		height: 345px;
-	}
-	.product
-	{
-		height: 305px;
-	}
-	.grid_sorting_button
-	{
-		font-size: 13px;
-		padding-left: 20px;
-		padding-right: 20px;
-		min-width: 80px;
-	}
-	.product_slider_container
-	{
-		height: auto;
-	}
-	.product_slider_item .product-item
-	{
-		height: 380px;
-	}
-	.benefit_col
-	{
-		margin-bottom: 15px;
-	}
-	.blog_item
-	{
-		height: 372px;
-	}
-	.newsletter_form
-	{
-		margin-bottom: 40px;
-	}
-	.newsletter_submit_btn
-	{
-		margin-top: 15px;
 	}
 }
 
@@ -394,19 +211,6 @@
         .hamburger_container
 	{
 		margin-left: 220px;
-	}
-	.product-item
-	{
-		width: 50%;
-		height: 420px;
-	}
-	.product
-	{
-		height: 380px;
-	}
-	.blog_item
-	{
-		height: calc((100vw - 30px) / 1.37);
 	}
 	.cr
 	{
@@ -512,12 +316,6 @@
 		height: 30px;
 		font-size: 12px;
 	}
-	.checkout_items
-	{
-		width: 15px;
-		height: 15px;
-		font-size: 10px;		
-	}
 	.main_slider
 	{
 		height: calc(100vh - 70px);
@@ -533,160 +331,9 @@
 	{
 		font-size: 24px;
 	}
-	.shop_now_button
-	{
-		margin-top: 15px;
-		width: 100px;
-		height: 35px;
-	}
-	.red_button a
-	{
-		font-size: 10px;
-	}
 	.banner_item
 	{
 		height: calc((100vw - 30px) / 2.6);
-	}
-	.grid_sorting_button
-	{
-		font-size: 12px;
-		padding-left: 10px;
-		padding-right: 10px;
-		min-width: 60px;
-		height: 35px;
-	}
-	.product-item
-	{
-		width: 100%;
-		height: auto;
-	}
-	.product
-	{
-		height: auto;
-	}
-	.product_name a
-	{
-		font-size: 12px;
-	}
-	.add_to_cart_button
-	{
-		margin-top: 20px;
-	}
-	.deal_ofthe_week_img
-	{
-		height: 400px;
-	}
-	.timer
-	{
-		margin-top: 42px;
-	}
-	.timer li
-	{
-		width: 50px;
-		height: 50px;
-	}
-	.section_title::after
-	{
-	    top: calc(100% + 8px);
-	    height: 3px;
-	}
-	.timer_num
-	{
-		margin-top: 4px;
-		font-size: 16px;
-	}
-	.timer_unit
-	{
-		margin-top: -9px;
-		font-size: 10px;
-	}
-	.deal_ofthe_week_button
-	{
-		margin-top: 36px;
-	}
-
-	.product_slider_item .product-item
-	{
-		width: 100%;
-		height: auto;
-	}
-	.product_slider_item .product-item:hover::after
-	{
-		box-shadow: none;
-	}
-	.product_slider_item .product-item .product
-	{
-		height: auto;
-	}
-	.product_slider_item .product-item .product_info
-	{
-		padding-bottom: 30px;
-	}
-	.blog_title
-	{
-		font-size: 16px;
-	}
-	.blog_meta
-	{
-		font-size: 10px;
-	}
-	.blog_more
-	{
-		font-size: 12px;
-		margin-top: 5px;
-	}
-	.newsletter_form
-	{
-		margin-top: 22px;
-	}
-	.newsletter_text h4
-	{
-		font-size: 20px;
-	}
-	.newsletter_text p
-	{
-		font-size: 13px;
-		margin-top: 5px;
-	}
-	.newsletter_submit_btn
-	{
-		font-size: 12px;
-	}
-	#newsletter_email
-	{
-		height: 40px;
-		width: 100%;
-		padding-left: 15px;
-	}
-	.newsletter_submit_btn
-	{
-		height: 36px;
-		width: 130px;
-	}
-	#newsletter_email::-webkit-input-placeholder
-	{
-		font-size: 12px !important;
-		padding-left: 0px;
-	}
-	#newsletter_email:-moz-placeholder /* older Firefox*/
-	{
-		font-size: 12px !important;
-		padding-left: 0px;
-	}
-	#newsletter_email::-moz-placeholder /* Firefox 19+ */ 
-	{
-		font-size: 12px !important;
-		padding-left: 0px;
-	} 
-	#newsletter_email:-ms-input-placeholder
-	{ 
-		font-size: 12px !important;
-		padding-left: 0px;
-	}
-	#newsletter_email::input-placeholder
-	{
-		font-size: 12px !important;
-		padding-left: 0px;
 	}
 	.footer_nav_container
 	{
@@ -721,7 +368,7 @@
         .main_slider 
         {
             height: 600px;
-            margin-left: -15px;
+            margin-left: -8px;
         }
         
         .footer_nav_container
