--- a/Biblioteca Interactiva Municipal/web/estilos/main_styles.css
+++ b/Biblioteca Interactiva Municipal/web/estilos/main_styles.css
@@ -1074,3 +1074,13 @@ display: block;
     align-content: center;
     
 }
+
+.table{
+    border:1px solid blue;
+  }
+.table > thead > tr > th{
+    border:1px solid blue;
+}
+.table > tbody > tr > td{
+    border:1px solid blue;
+}
