Arreglo de la linea de la tabla y los inputs en rojo

--- a/Biblioteca Interactiva Municipal/web/estilos/main_styles.css
+++ b/Biblioteca Interactiva Municipal/web/estilos/main_styles.css
@@ -1064,12 +1064,18 @@ display: block;
 /*PROPIOS*/
 
 
-.ingresar-libro{
-    
+.ingresar-libro
+{ 
     padding-top: 200px;
 }
-.log {
+
+.log 
+{
     margin-left: 50px;
     align-content: center;
-    
+}
+
+thead 
+{
+    border-bottom:3px solid darkgray; 
 }
