Generacion del codigo de verificacion

--- a/Biblioteca Interactiva Municipal/web/estilos/main_styles.css
+++ b/Biblioteca Interactiva Municipal/web/estilos/main_styles.css
@@ -984,6 +984,11 @@ display: block;
     width: 250px;
 }
 
+#verificaUsuario input{
+    width: 250px;
+}
+
+
 #libForm textarea{
     width: 250px;
 }
