--- a/Biblioteca Interactiva Municipal/web/estilos/main_styles.css
+++ b/Biblioteca Interactiva Municipal/web/estilos/main_styles.css
@@ -1092,6 +1092,14 @@ display: block;
    
 }
 
+#tablaAsignaturas{
+    background-color: white;
+}
+
+#tablaAsignaturas tr:nth-child(odd) {
+   background-color:#dddddd;
+}
+
 .field-icon {
   float: left;
   margin-left: 225px;
