--- a/Biblioteca Interactiva Municipal/web/estilos/main_styles.css
+++ b/Biblioteca Interactiva Municipal/web/estilos/main_styles.css
@@ -1159,5 +1159,9 @@ input[type=submit] {
   z-index: 2;
 }
 
+div.administrador, div.usuario, div.administradorR, div.usuarioR{
+display: none;
+}
+
 
 
