cambios en footer, agregar autor, FALTA ARREGLAR ALERTAS EN VARIOS JSP Y CAMBIAR EL AGREGAR AUTOR Y ASIGNATURA A AJAX

--- a/Biblioteca Interactiva Municipal/web/estilos/main_styles.css
+++ b/Biblioteca Interactiva Municipal/web/estilos/main_styles.css
@@ -335,6 +335,7 @@ display: block;
 	-ms-transition: opacity 0.3s ease;
 	-o-transition: opacity 0.3s ease;
 	transition: all 0.3s ease;
+     
 }
 .dropdown_selection li
 {
@@ -353,6 +354,7 @@ display: block;
 	-ms-transition: opacity 0.3s ease;
 	-o-transition: opacity 0.3s ease;
 	transition: all 0.3s ease;
+        line-height: 1.6;
 }
 .dropdown_selection li a:hover
 {
@@ -847,7 +849,7 @@ display: block;
 }
 .main_slider_content
 {
-	width: 60%;
+	width: 100%;
 }
 .main_slider_content h6
 {
@@ -1002,6 +1004,171 @@ display: block;
 5. Footer
 ***********/
 
+
+.footer-distributed
+{
+	background-color: #1B1A1A;
+	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+	box-sizing: border-box;
+	width: 100%;
+	text-align: left;
+	font: bold 16px sans-serif;
+	padding: 55px 50px;
+	margin-top: 80px;
+}
+
+.footer-distributed .footer-left,
+.footer-distributed .footer-center,
+.footer-distributed .footer-right{
+	display: inline-block;
+	vertical-align: top;
+}
+
+.footer-distributed .footer-center{
+    width: 60%;
+}
+
+
+/* Footer left */
+
+.footer-distributed .footer-left{
+	width: 44%;
+}
+
+/* The company logo */
+
+.footer-distributed h3{
+	color:  #ffffff;
+	font: normal 36px 'Cookie', cursive;
+	margin: 0;
+}
+
+.footer-distributed h3 span{
+	color:  #5383d3;
+}
+
+/* Footer links */
+
+.footer-distributed .footer-links{
+	color:  #ffffff;
+	margin: 20px 0 12px;
+	padding: 0;
+}
+
+.footer-distributed .footer-links a{
+	display:inline-block;
+	line-height: 1.8;
+	text-decoration: none;
+	color:  inherit;
+}
+
+.footer-distributed .footer-company-name{
+	color:  #8f9296;
+	font-size: 14px;
+	font-weight: normal;
+	margin: 0;
+}
+
+/* Footer Center */
+
+.footer-distributed .footer-center{
+	width: 35%;
+}
+
+.footer-distributed .footer-center i{
+	background-color:  #33383b;
+	color: #ffffff;
+	font-size: 25px;
+	width: 38px;
+	height: 38px;
+	border-radius: 50%;
+	text-align: center;
+	line-height: 42px;
+	margin: 10px 15px;
+	vertical-align: middle;
+}
+
+.footer-distributed .footer-center i.fa-envelope{
+	font-size: 17px;
+	line-height: 38px;
+}
+
+.footer-distributed .footer-center p{
+	display: inline-block;
+	color: #ffffff;
+	vertical-align: middle;
+	margin:0;
+}
+
+.footer-distributed .footer-center p span{
+	display:block;
+	font-weight: normal;
+	font-size:14px;
+	line-height:2;
+}
+
+.footer-distributed .footer-center p a{
+	color:  #5383d3;
+	text-decoration: none;;
+}
+
+
+/* Footer Right */
+
+.footer-distributed .footer-right{
+	width: 20%;
+}
+
+.footer-distributed .footer-company-about{
+	line-height: 20px;
+	color:  #92999f;
+	font-size: 13px;
+	font-weight: normal;
+	margin: 0;
+}
+
+.footer-distributed .footer-company-about span{
+	display: block;
+	color:  #ffffff;
+	font-size: 14px;
+	font-weight: bold;
+	margin-bottom: 20px;
+}
+
+.footer-distributed .footer-icons{
+	margin-top: 25px;
+}
+
+.footer-distributed .footer-icons a{
+	display: inline-block;
+	width: 35px;
+	height: 35px;
+	cursor: pointer;
+	background-color:  #33383b;
+	border-radius: 2px;
+
+	font-size: 20px;
+	color: #ffffff;
+	text-align: center;
+	line-height: 35px;
+
+	margin-right: 3px;
+	margin-bottom: 5px;
+}
+
+
+//*****************************************
+/*
+.footer{
+    width: 100%;
+    height: 150px;
+    position: absolute;
+    bottom: 0px;
+	background-image: linear-gradient(#061F72, black);
+	box-shadow: 0 0 16px rgba(0, 0, 0, 0.15);
+        
+}
+
 .footer_nav_container
 {	
     height: 50px;
@@ -1067,7 +1234,7 @@ display: block;
 {
 	color: #fe4c50;
 }
-
+*/
 
 /*PROPIOS*/
 
@@ -1325,7 +1492,3 @@ input[type=button]:active, input[type=submit]:active, input[type=reset]:active  
 *:focus {
     outline: none;
 } 
-
-
-
-
