--- a/Biblioteca Interactiva Municipal/web/estilos/responsive.css
+++ b/Biblioteca Interactiva Municipal/web/estilos/responsive.css
@@ -24,14 +24,7 @@
 
 @media only screen and (max-width: 1600px)
 {
-	  .footer_main_container{
-        margin-top: 200px;
-    }
-                .company_logo {
-            margin-top: 100px;
-            height:100px; 
-            width:100px;
-        }
+
 }
 
 /************
@@ -40,14 +33,6 @@
 
 @media only screen and (max-width: 1540px)
 {
-  .footer_main_container{
-        margin-top: 200px;
-    }
-                .company_logo {
-            margin-top: 100px;
-            height:100px; 
-            width:100px;
-        }
 }
 
 /************
@@ -56,14 +41,8 @@
 
 @media only screen and (max-width: 1380px)
 {
-  .footer_main_container{
-        margin-top: 200px;
-    }
-                .company_logo {
-            margin-top: 100px;
-            height:100px; 
-            width:100px;
-        }
+
+      
 }
 
 /************
@@ -72,14 +51,12 @@
 
 @media only screen and (max-width: 1280px)
 {
-    .footer_main_container{
-        margin-top: 200px;
+    .company_logo{
+        margin-left: -15px;
+        height:70px; 
+        width:70px;
+        margin-top: 10px;
     }
-            .company_logo {
-            margin-top: 100px;
-            height:100px; 
-            width:100px;
-        }
 }
 
 /************
@@ -101,11 +78,7 @@
 	{
 		width: 80%;
 	}
-                .company_logo {
-            margin-top: 80px;
-            height:80px; 
-            width:80px;
-        }
+        
 }
 
 /************
@@ -114,7 +87,7 @@
 
 @media only screen and (max-width: 1024px)
 {
-            .company_logo {
+        .company_logo {
             margin-top: 100px;
             height:100px; 
             width:100px;
@@ -157,25 +130,7 @@
 		width: 100%;
 		padding-right: 15px;
 	}
-        .footer_nav_container
-	{
-		margin-top: 700px;
-                heigth: 50px;
-	}
-	.cr
-	{
-		margin-top: -700px;
-	}
-	.footer_nav
-	{
-		margin-bottom: 20px;
-                width: 100%;
-	}
-	.footer_social
-	{
-		margin-top: 20px;
-		margin-bottom: 40px;
-	}
+
         .company_logo {
             margin-top: 80px;
             height:80px; 
@@ -194,30 +149,7 @@
             margin-left: 450px;
 	}
         
-        .footer_social
-        {
-            margin-left: -5px;
-        }
-        
-        .footer_nav_container
-	{
-		margin-top: 650px;
-                heigth: 50px;
-	}
-	.cr
-	{
-		margin-top: -600px;
-	}
-	.footer_nav
-	{
-		margin-bottom: 20px;
-	}
-	.footer_social
-	{
-		margin-top: 5px;
-		margin-bottom: 30px;
-        }
-                .company_logo {
+        .company_logo {
             margin-top: 60px;
             height:60px; 
             width:60px;
@@ -235,32 +167,20 @@
 	{
 		margin-left: 400px;
 	}
-        
-                .footer_nav_container
-	{
-		margin-top: 675px;
-                heigth: 50px;
-	}
-	.cr
-	{
-		margin-top: -600px;
-	}
-	.footer_nav
-	{
-		margin-bottom: 20px;
-	}
-	.footer_social
-	{
-		margin-top: 5px;
-		margin-bottom: 30px;
-	}
+
         .company_logo {
-            margin-top: 60px;
-            height:60px; 
-            width:60px;
+            margin-top: 0px;
+            height:70px; 
+            width:70px;
+        }
+	
+        .logo_container {
+           margin-top: 50px;
+           height: 80px;
+           width: 70px;
         }
         
-        	.footer-distributed{
+        .footer-distributed{
 		font: bold 14px sans-serif;
 	}
 
@@ -294,23 +214,15 @@
 		margin-top: 700px;
                 heigth: 50px;
 	}
-	.cr
-	{
-		margin-top: -600px;
-	}
-	.footer_nav
-	{
-		margin-bottom: 20px;
-	}
-	.footer_social
-	{
-		margin-top: 5px;
-		margin-bottom: 30px;
-	}
+
         .company_logo {
-            margin-top: 60px;
+            margin-top: 15px;
             height:60px; 
             width:60px;
+        }
+        
+        .logo_container {
+            margin-top: 50px;
         }
         
 }
@@ -343,19 +255,7 @@
 		margin-top: 650px;
                 heigth: 50px;
 	}
-	.cr
-	{
-		margin-top: -600px;
-	}
-	.footer_nav
-	{
-		margin-bottom: 20px;
-	}
-	.footer_social
-	{
-		margin-top: 5px;
-		margin-bottom: 30px;
-	}
+
         .company_logo {
             margin-top: 60px;
             height:60px; 
@@ -378,36 +278,9 @@
 	{
 		margin-left: 220px;
 	}
-        .footer_nav_container
-	{
-		margin-top: 650px;
-                heigth: 50px;
-	}
-	.cr
-	{
-		margin-top: -600px;
-	}
-	.footer_nav
-	{
-		margin-bottom: 20px;
-	}
-	.footer_social
-	{
-		margin-top: 5px;
-		margin-bottom: 30px;
-	}margin-bottom: 20px;
-	}
-	.footer_nav li
-	{
-		display: block;
-		margin-right: 0px;
-	}
-	.footer_nav li a
-	{
-		font-size: 13px;
-	}
+
         .company_logo {
-            margin-top: 60px;
+            margin-top: 15px;
             height:60px; 
             width:60px;
         }
@@ -424,34 +297,6 @@
 		margin-left: 150px;
 	}
         
-	.footer_nav li
-	{
-		display: block;
-		margin-right: 0px;
-	}
-	.footer_nav li a
-	{
-		font-size: 13px;
-	}
-        
-        .footer_nav_container
-	{
-		margin-top: 650px;
-                heigth: 50px;
-	}
-	.cr
-	{
-		margin-top: -600px;
-	}
-	.footer_nav
-	{
-		margin-bottom: 20px;
-	}
-	.footer_social
-	{
-		margin-top: 5px;
-		margin-bottom: 30px;
-	}
         .company_logo {
             margin-top: 60px;
             height:60px; 
@@ -586,28 +431,17 @@
 	{
 		height: calc((100vw - 30px) / 2.6);
 	}
-	.footer_nav_container
-	{
-		margin-top: 850px;
-                heigth: 50px;
-	}
-	.cr
-	{
-		margin-top: -800px;
-	}
-	.footer_nav
-	{
-		margin-bottom: 20px;
-	}
-	.footer_social
-	{
-		margin-top: 5px;
-		margin-bottom: 30px;
-	}
-        .company_logo {
-            margin-top: 60px;
+		.company_logo {
+            margin-top: 0px;
             height:60px; 
             width:60px;
+            margin-left: 1px;
+        }
+	
+        .logo_container {
+           margin-top: 30px;
+           height: 50px;
+           width: 70px;
         }
 }
 
@@ -627,31 +461,17 @@
             height: 600px;
             margin-left: -8px;
         }
-        
-        .footer_nav_container
-	{
-                height: 450px;
-		margin-top: 200px;
-	}
-	.cr
-	{
-		margin-top: -150px;
-	}
-	.footer_nav
-	{
-		margin-top: 350px;
-                height: 50px;
-	}
-	.footer_social
-	{
-		margin-top: 170px;
-                margin-left: -5px;
-	}
-
+       
         .company_logo {
-            margin-top: 60px;
+            margin-top: 0px;
             height:60px; 
             width:60px;
+            margin-left: 1px;
         }
 	
+        .logo_container {
+           margin-top: 30px;
+           height: 50px;
+           width: 70px;
+        }
 }
