overflow en el main_slider para que cuando el datatable tiene +50 datos no caiga sobre el footer

--- a/Biblioteca Interactiva Municipal/web/estilos/main_styles.css
+++ b/Biblioteca Interactiva Municipal/web/estilos/main_styles.css
@@ -844,7 +844,8 @@ display: block;
 .main_slider
 {
 	width: 100%;
-	height: 1000px;
+	display: block;
+        overflow: auto;
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center center;
