--- a/Biblioteca Interactiva Municipal/web/estilos/responsive.css
+++ b/Biblioteca Interactiva Municipal/web/estilos/responsive.css
@@ -474,4 +474,8 @@
            height: 50px;
            width: 70px;
         }
+        
+        #carouselActividades {
+            margin-top: 150px;
+        }
 }
