--- a/Biblioteca Interactiva Municipal/web/estilos/main_styles.css
+++ b/Biblioteca Interactiva Municipal/web/estilos/main_styles.css
@@ -1014,7 +1014,6 @@ display: block;
     
         background-color: #000000;
         background-image: linear-gradient(147deg, #000000 0%, #434343 74%);
-	//background-color: #1B1A1A;
 	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 	box-sizing: border-box;
 	width: 100%;
@@ -1165,6 +1164,12 @@ display: block;
 
 #carouselActividades {
     margin-top: 70px;
+}
+
+.siema{
+    display: inline-block; 
+    height: 400px; 
+    width:80%;
 }
 
  .carousel-inner img {
