--- a/Biblioteca Interactiva Municipal/web/estilos/main_styles.css
+++ b/Biblioteca Interactiva Municipal/web/estilos/main_styles.css
@@ -305,10 +305,11 @@ section
 {
     display: block;
 	color: #b5aec4;
-	font-weight: 400;
+	font-weight: 300;
 	height: 50px;
 	line-height: 50px;
 	font-size: 5px;
+        white-space: nowrap;
 }
 .dropdown > a > i
 {
@@ -356,6 +357,9 @@ display: block;
 	-o-transition: opacity 0.3s ease;
 	transition: all 0.3s ease;
         line-height: 1.6;
+        white-space: nowrap;
+        align-items:center;
+
 }
 .dropdown_selection li a:hover
 {
@@ -1164,12 +1168,18 @@ display: block;
 }
 
 .siema{
-    margin-top: 100px;
+    margin-top: 150px;
+    height: 1024px;
+    width: auto;    
 }
 
  .siema img {
       width: 100%;
       height: 100%;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+       -o-background-size: cover;
+       background-size: cover;
   }
 
 .ingresar-libro
