arreglos de diseño a los datatables, recarga de datos en los datatables a la hora de modificar algun dato

--- a/Biblioteca Interactiva Municipal/web/estilos/main_styles.css
+++ b/Biblioteca Interactiva Municipal/web/estilos/main_styles.css
@@ -1457,3 +1457,8 @@ input[type=button]:active, input[type=submit]:active, input[type=reset]:active  
   background: blue;
 }
 
+
+table.dataTable thead {
+   // background-color:gray
+   vertical-align: middle;
+}
