--- a/Biblioteca Interactiva Municipal/web/estilos/responsive.css
+++ b/Biblioteca Interactiva Municipal/web/estilos/responsive.css
@@ -88,9 +88,21 @@
 @media only screen and (max-width: 1024px)
 {
         .company_logo {
-            margin-top: 100px;
+            margin-top: 0px;
             height:100px; 
             width:100px;
+        }
+        
+        .containerForm {
+        width: auto;
+        }
+        
+        .tituloForm{
+        margin-left: 75px;
+        } 
+        
+        .form-group{
+            margin-left: 40px;
         }
 	
 }
@@ -132,9 +144,10 @@
 	}
 
         .company_logo {
-            margin-top: 80px;
-            height:80px; 
-            width:80px;
+            margin-top: 37px;
+            height: 80px;
+            width: 80px;
+            margin-left: -100px;
         }
 }
 
@@ -150,7 +163,7 @@
 	}
         
         .company_logo {
-            margin-top: 14px;
+            margin-top: 40px;
             height: 60px;
             width: 60px;
             margin-left: -66px;
@@ -171,8 +184,9 @@
 
         .company_logo {
             margin-top: 0px;
-            height:70px; 
-            width:70px;
+            height: 70px;
+            width: 70px;
+            margin-left: -27px;
         }
 	
         .logo_container {
@@ -259,8 +273,9 @@
 
         .company_logo {
             margin-top: 10px;
-            height:60px; 
-            width:60px;
+            height: 60px;
+            width: 60px;
+            margin-left: -18px;
         }
 }
 
@@ -282,9 +297,28 @@
 
         .company_logo {
             margin-top: 15px;
-            height:60px; 
-            width:60px;
+            height: 60px;
+            width: 60px;
+            margin-left: -6px;
         }
+        .containerForm {
+        width: auto;
+        }
+        
+        .tituloForm{
+        margin-left: 10px;
+        } 
+        
+        .form-group{
+            margin-left: -60px;
+        }
+       
+        #regUsuarios #identificacion{
+            width: 200px;
+        }
+        
+
+
 }
 
 /************
@@ -300,8 +334,9 @@
         
         .company_logo {
             margin-top: 8px;
-            height:60px; 
-            width:60px;
+            height: 60px;
+            width: 60px;
+            margin-left: -5px;
         }
 }
 
@@ -349,9 +384,10 @@
 		margin-bottom: 30px;
 	}
         .company_logo {
-            margin-top: 60px;
-            height:60px; 
-            width:60px;
+            margin-top: 5px;
+            height: 60px;
+            width: 60px;
+            margin-left: 0px;
         }
 }
 
