Interfaz de usuario actualizada

--- a/Biblioteca Interactiva Municipal/web/estilos/main_styles.css
+++ b/Biblioteca Interactiva Municipal/web/estilos/main_styles.css
@@ -1645,3 +1645,14 @@ margin-bottom: 20px;
 margin-left: 0px;
 } 
 
+#regUsuarios #identificacion{
+    width: 250px;
+}
+
+.linkButton { 
+     background: none;
+     border: none;
+     color: #0066ff;
+     text-decoration: underline;
+     cursor: pointer; 
+}
